tests/ui/scalar_types_postgres/fail/date_trunc_rejects_date.stderr
error[E0277]: DATE_TRUNC output type is not defined for `drizzle::core::types::Date` on this dialect
 --> tests/ui/scalar_types_postgres/fail/date_trunc_rejects_date.rs:6:31
  |
6 |     let _ = date_trunc("day", raw_non_null::<PostgresValue, Date>("CURRENT_DATE"));
  |             ----------        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DATE_TRUNC accepts timestamp/timestamptz and preserves the timestamp flavor
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `DateTruncPolicy<drizzle_core::dialect::PostgresDialect>` is not implemented for `drizzle::core::types::Date`
help: the following other types implement trait `DateTruncPolicy<D>`
 --> core/src/expr/datetime.rs
  |
  | impl DateTruncPolicy<PostgresDialect> for Timestamp {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::core::types::Timestamp`
...
  | impl DateTruncPolicy<PostgresDialect> for TimestampTz {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::core::types::TimestampTz`
note: required by a bound in `date_trunc`
 --> core/src/expr/datetime.rs
  |
  | pub fn date_trunc<'a, V, P, E>(
  |        ---------- required by a bound in this function
...
  |     E::SQLType: DateTruncPolicy<V::DialectMarker>,
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `date_trunc`

error[E0277]: DATE_TRUNC output type is not defined for `drizzle::core::types::Date` on this dialect
 --> tests/ui/scalar_types_postgres/fail/date_trunc_rejects_date.rs:6:13
  |
6 |     let _ = date_trunc("day", raw_non_null::<PostgresValue, Date>("CURRENT_DATE"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DATE_TRUNC accepts timestamp/timestamptz and preserves the timestamp flavor
  |
  = help: the trait `DateTruncPolicy<drizzle_core::dialect::PostgresDialect>` is not implemented for `drizzle::core::types::Date`
help: the following other types implement trait `DateTruncPolicy<D>`
 --> core/src/expr/datetime.rs
  |
  | impl DateTruncPolicy<PostgresDialect> for Timestamp {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::core::types::Timestamp`
...
  | impl DateTruncPolicy<PostgresDialect> for TimestampTz {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::core::types::TimestampTz`
